--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
+    "stimulus": "^1.1.1",
+    "stimulus_reflex": "^2.0.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
